Introduce implementation of external model spec provider
External model spec provider implementation is
`RemoteModelConnectionSpecsLoader` which relies on an endpoint on
coordinator. Moreover, Galaxy and SEP have to provide the implementation
of resources at
`/api/v1/ai/internal/model-connection-specs` endpoint.

cherry-pick of https://github.com/starburstdata/cork/commit/358386b15bcd154d500bb740122f3213153bbfce